Changed API provider for News Website

--- a/NewsWebsite/styles.css
+++ b/NewsWebsite/styles.css
@@ -56,6 +56,7 @@ nav {
 .main-nav {
     justify-content: space-between;
     padding-block: 6px;
+    padding-inline: 20px;
 }
 
 .company-logo img {
@@ -121,6 +122,7 @@ main {
 .briefing-container {
     max-width: 1180px;
     margin-inline: auto;
+    padding-inline: 20px;
     overflow: hidden;
     justify-content: space-between;
     margin-block: 10px;
@@ -133,19 +135,17 @@ main {
     margin: 0;
 }
 .weather-body {
-    gap: 12px;
-    text-transform: capitalize;
+    gap: 10px;
 }
 
 .cards-container {
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-wrap: wrap;
     row-gap: 20px;
     align-items: center;
 }
 
 .card {
-    align-self: flex-start;
     width: 360px;
     min-height: 400px;
     box-shadow: 0 0 4px #d4ecff;
@@ -176,14 +176,14 @@ main {
     margin-block: 12px;
     margin-inline: 10px;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .news-date {
     color: rgb(80, 80, 80);
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
     main {
         margin-top: 90px;
     }
@@ -194,5 +194,16 @@ main {
     .briefing-container {
         flex-direction: row;
         flex-wrap: wrap;
+        padding-inline: 18px;
     }
+    
 }
+
+@media screen and (max-width: 480px) {
+    .briefing {
+        font-size: 18px;
+    }
+    .weather {
+        padding-inline: 12px;
+    }
+} 
