Added dark mode to news website

--- a/NewsWebsite/styles.css
+++ b/NewsWebsite/styles.css
@@ -7,20 +7,39 @@
 }
 
 :root {
-    --primary-text-color: #183b56;
-    --secondary-text-color: #577592;
-    --accent-color: #2294ed;
+    --primary-text-color: #232324;
+    --secondary-text-color: #909091;
+    --accent-color: #5f50a9;
+    --accent-color-light: #8b83ae;
     --accent-color-dark: #1d69a3;
+    --background-color: #f6f8fc;
+    --box-shadow-color: #bbd0e2;
+    --card-box-shadow-color: #d4ecff;
+    --card-hover-box-shadow-color: #d4ecff;
+    --card-hover-background-color: #f9fdff;
+    --card-background-color: #ffffff;
+}
+
+.dark {
+    --primary-text-color: #ffffff;
+    --secondary-text-color: #b0b0b0;
+    --background-color: #292a2d;
+    --card-background-color: #1f1f1f;
+    --box-shadow-color: #444;
+    --card-box-shadow-color: #1c1c1c;
+    --card-hover-box-shadow-color: #1c1c1c;
+    --card-hover-background-color: #222;
 }
 
 body {
     font-family: "Poppins", sans-serif;
     color: var(--primary-text-color);
+    background-color: var(--background-color);
 }
 
 p {
     font-family: "Roboto", sans-serif;
-    color: var(--secondary-text-color);
+    color: var(--primary-text-color);
     line-height: 1.4rem;
 }
 
@@ -36,6 +55,9 @@ ul {
     display: flex;
     align-items: center;
 }
+.grid {
+    display: grid;
+}
 
 .container {
     max-width: 1180px;
@@ -44,8 +66,8 @@ ul {
 }
 
 nav {
-    background-color: #f3faff;
-    box-shadow: 0 0 4px #bbd0e2;
+    background: linear-gradient(to right, var(--accent-color), var(--accent-color-light));
+    box-shadow: 0 0 4px var(--box-shadow-color);
     position: fixed;
     top: 0;
     z-index: 99;
@@ -54,12 +76,17 @@ nav {
 }
 
 .main-nav {
-    justify-content: space-between;
+    color: black;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+    justify-content: center;
     padding-block: 6px;
     padding-inline: 20px;
+    column-gap: 10px;
 }
 
 .company-logo img {
+    justify-self: start;
     width: 90px;
     height: 40px;
     margin: 0;
@@ -68,6 +95,9 @@ nav {
 
 .nav-links ul {
     gap: 16px;
+}
+.nav-links {
+    justify-self: center;
 }
 
 .hover-link {
@@ -83,16 +113,20 @@ nav {
 }
 
 .nav-item.active {
-    color: var(--accent-color);
+    color: powderblue;
 }
 
 .search-bar {
+    justify-self: end;
+    justify-items: self-end;
+    grid-template-columns: 2fr 1fr;
     height: 32px;
-    gap: 8px;
+    gap: 6px;
 }
 
 .news-input {
-    width: 200px;
+    color: var(--primary-text-color);
+    background-color: var(--background-color);
     height: 100%;
     padding-inline: 12px;
     border-radius: 4px;
@@ -101,7 +135,8 @@ nav {
 }
 
 .search-button {
-    background-color: var(--accent-color);
+    max-width: 100px;
+    background-color: var(--accent-color-dark);
     color: white;
     padding: 8px 24px;
     border: none;
@@ -111,7 +146,22 @@ nav {
 }
 
 .search-button:hover {
-    background-color: var(--accent-color-dark);
+    background-color: var(--accent-color);
+}
+
+.dark-bar {
+    justify-self: end;
+}
+.dark-img {
+    justify-items: end;
+    width: 50px;
+    height: 46px;
+}
+
+.mobile-nav {
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+    gap: 10px;
 }
 
 main {
@@ -130,7 +180,7 @@ main {
 
 .weather {
     padding:6px 14px;
-    background-color: rgb(230, 230, 230);
+    background-color: var(--card-background-color);
     border-radius: 8px;
     margin: 0;
 }
@@ -148,17 +198,17 @@ main {
 .card {
     width: 360px;
     min-height: 400px;
-    box-shadow: 0 0 4px #d4ecff;
+    box-shadow: 0 0 4px var(--card-box-shadow-color);
     border-radius: 4px;
     cursor: pointer;
-    background-color: #fff;
+    background-color: var(--card-background-color);
     overflow: hidden;
     transition: all 0.3s ease;
 }
 
 .card:hover {
-    box-shadow: 1px 1px 8px #d4ecff;
-    background-color: #f9fdff;
+    box-shadow: 1px 1px 8px var(--card-hover-box-shadow-color);
+    background-color: var(--card-hover-background-color);
     transform: translateY(-2px);
 }
 
@@ -169,6 +219,7 @@ main {
 }
 
 .card-content {
+    color: var(--primary-text-color);
     padding: 12px;
 }
 
@@ -180,12 +231,27 @@ main {
 }
 
 .news-date {
-    color: rgb(80, 80, 80);
+    color: var(--primary-text-color);
 }
+
+.dark-mode {
+    width: 60px;
+    height: 50px;
+    background: #4444448a;
+    border-radius: 20% 0% 0% 20%;
+    position: fixed;
+    bottom: 30px;
+    right: 0px;
+}
+.dark-mode img {
+    padding-inline: 8px 0px;
+    width: 56px;
+}
+
 
 @media screen and (max-width: 768px) {
     main {
-        margin-top: 90px;
+        margin-top: 50px;
     }
     .container {
         flex-direction: column;
@@ -196,14 +262,55 @@ main {
         flex-wrap: wrap;
         padding-inline: 18px;
     }
+    .main-nav {
+        grid-template-columns: 1fr 2fr;
+        padding-block: 4px;
+    }
+    .mobile-nav {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        justify-items: center;
+    }
+    .search-bar {
+        justify-self: center;
+        gap: 4px;
+    }
     
 }
 
 @media screen and (max-width: 480px) {
+    .main-nav {
+        gap: 4px;
+    }
+    .mobile-nav {
+        margin-right: 8px;
+        row-gap: 2px;
+    }
     .briefing {
         font-size: 18px;
     }
-    .weather {
-        padding-inline: 12px;
+    .today-date {
+        font-size: 12px;
     }
+    .weather {
+        width: 190px;
+        padding-inline: 10px;
+    }
+    .nav-links {
+        font-size: 14px;
+    }
+    .news-input {
+        width: 180px;
+    }
+    .search-button {
+        padding-inline: 16px;
+    }
+    .company-logo img {
+        width: 80px;
+        height: 40px;
+    }
+    .card {
+        width: 340px;
+    }
+
 } 
