--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
     --accent-color: #5f50a9;
     --accent-color-light: #8b83ae;
 }
+
 .dark {
     --primary-color: rgb(40, 40, 40);
     --secondary-color: rgb(60, 60, 60);
@@ -20,6 +21,7 @@
 .flex {
     display: flex;
 }
+
 .grid {
     display: grid;
 }
@@ -27,12 +29,15 @@
 body {
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
 }
+
 ul {
     list-style: none;
 }
+
 a {
     text-decoration: none;
 }
+
 a:visited {
     text-decoration: none;
     color: black;
@@ -40,7 +45,7 @@ a:visited {
 
 .container {
     height: 100%;
-    padding: 140px;
+    padding: 120px;
     justify-content: space-between;
     align-items: center;
     background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
@@ -56,6 +61,7 @@ nav {
     z-index: 99;
     left: 0;
     right: 0;
+    border-radius: 0px 0px 20px 20px;
 }
 
 
@@ -63,11 +69,13 @@ nav {
     justify-content: space-between;
     padding-block: 6px;
     background: linear-gradient(to right, var(--accent-color), var(--accent-color-light));
+    border-radius: 0px 0px 20px 20px;
 }
 
 .nav-links ul {
     gap: 16px;
 }
+
 .nav-links ul li a {
     color: var(--primary-text-color);
     font-size: 20px;
@@ -94,22 +102,35 @@ nav {
     cursor: pointer;
 }
 
+.container-1 {
+    width: 400px;
+}
+
 .portfolio-card-designer {
     margin: 20px;
     color: var(--primary-text-color);
     background: var(--accent-color);
     width: 70%;
     min-width: 360px;
-    padding: 25px 65px;
+    padding: 25px 45px;
     padding-bottom: 45px;
     border-radius: 12px;
     transition: ease .40s;
 }
+
+
 .portfolio-card-designer:hover {
     box-shadow: 18px 18px 87px 0px rgb(10 15 70 / 20%);
     border-radius: 12px;
     transform: perspective(1000px) rotateX(20.0deg) rotateY(0.0deg) scale3d(1.05, 1.05, 1.05);
 }
+
+.quoter {
+    font-style: italic;
+    font-size: 22px;
+    float: right;
+}
+
 
 .portfolio-card {
     margin: 20px;
@@ -117,8 +138,21 @@ nav {
     background: var(--primary-color);
     width: 70%;
     min-width: 360px;
-    padding: 25px 65px;
+    padding: 25px 45px;
     padding-bottom: 45px;
+    border-radius: 12px;
+    transition: ease .40s;
+}
+
+.portfolio-card-skills {
+    margin: 10px;
+    color: var(--primary-text-color);
+    background: var(--primary-color);
+    height: 80%;
+    width: 80%;
+    min-height: 300px;
+    min-width: 360px;
+    padding: 10px 20px;
     border-radius: 12px;
     transition: ease .40s;
 }
@@ -127,8 +161,54 @@ nav {
     font-size: 30px;
     margin-block: 10px;
 }
+
 .card-subheading {
-    font-size: 30px;
+    font-size: 22px;
+}
+
+.tab-titles {
+    display: flex;
+    margin: 10px 0 25px;
+}
+
+.tab-links {
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+}
+
+.tab-links::after {
+    content: '';
+    width: 0;
+    height: 6px;
+    background: var(--accent-color);
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+}
+
+.tab-links.active-link::after {
+    width: 50%;
+}
+
+.tab-contents ul li {
+    margin: 10px 0;
+}
+
+.tab-contents ul li span {
+    color: var(--accent-color);
+    font-size: 16px;
+}
+
+.tab-contents {
+    display: none;
+}
+
+.tab-contents.active-tab {
+    display: block;
 }
 
 .gallery {
@@ -158,6 +238,7 @@ nav {
     background-position: center;
     box-shadow: 0 0 4px #fff;
 }
+
 .col-2 {
     grid-column: span 2;
 }
@@ -166,35 +247,199 @@ nav {
     grid-row: span 2;
 }
 
+footer {
+    height: 20vh;
+    bottom: 0;
+    background-color: #222;
+}
+
+.footer-container {
+    height: 100%;
+    justify-content: space-between;
+    align-items: center;
+    padding-inline: 40px;
+}
+
+.footer-bio {
+    align-items: center;
+    gap: 16px;
+}
+
+.resume {
+    background: none;
+    font-weight: bold;
+    padding: 10px;
+    color: var(--accent-color);
+    border: 2px solid var(--accent-color);
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.resume:hover {
+    color: black;
+    background-color: var(--accent-color);
+}
+
+.footer-icons {
+    color: white;
+    height: 100%;
+    justify-content: space-between;
+    align-items: center;
+    gap: 40px;
+}
+
+.social-icon {
+    width: 36px;
+    filter: invert();
+    cursor: pointer;
+}
+
+.social-icon:hover {
+    width: 46px;
+    fill: blue;
+}
 
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1400px) {
     .container {
         flex-direction: column;
         padding: 8px;
     }
+
+    .quoter {
+        font-size: 18px;
+    }
+
+    .portfolio-card {
+        margin-block: 10px;
+        padding: 10px 20px;
+    }
+
+    .card-heading {
+        font-size: 18px;
+        margin-block: 8px;
+    }
+
+    .card-subheading {
+        font-size: 18px;
+    }
+
+    .gallery {
+        grid-template-columns: 1fr 1fr;
+    }
+
     .gallery {
         width: 100%;
-        grid-auto-rows: 220px;
     }
-    .box {
-        grid-column: span 3;
-        grid-row: span 1;
+
+    .box-box {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 1;
+        grid-row-end: 3;
     }
+
+    .box-code {
+        grid-column-start: 2;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+
+    .box-live {
+        grid-column-start: 2;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+
+    .box-lift {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 3;
+        grid-row-end: 4;
+    }
+
+    .box-understand {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 4;
+        grid-row-end: 5;
+    }
+
+    .box-grapple {
+        grid-column-start: 2;
+        grid-row-start: 3;
+        grid-row-end: 5;
+    }
+
+    .box-rest {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 5;
+        grid-row-end: 6;
+    }
+
     .dark-img {
         width: 50px;
         height: 46px;
     }
+
     .portfolio-card-designer {
-        margin-top: 120px;
+        margin-block: 80px 10px;
         padding: 20px 40px;
         padding-bottom: 45px;
     }
+
     .card-heading {
         margin-block: 6px;
     }
+
     .main-nav {
         flex-direction: row;
+    }
+
+    footer {
+        height: 10vh;
+    }
+
+    .footer-container {
+        height: 100%;
+        justify-content: space-between;
+        align-items: center;
+        padding-inline: 10px;
+    }
+
+    .footer-bio {
+        align-items: center;
+        gap: 10px;
+    }
+
+
+
+    .footer-icons {
+        color: white;
+        height: 100%;
+        /* width: 100%; */
+        justify-content: space-between;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .social-icon {
+        width: 26px;
+        filter: invert();
+        cursor: pointer;
+    }
+
+    .social-icon:hover {
+        width: 30px;
+    }
+}
+
+@media screen and (max-width: 370px) {
+
+    .portfolio-card-designer {
+        padding: 10px 20px;
+        padding-bottom: 40px;
     }
 }
